Added recipes list screen

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -10,9 +10,10 @@ android {
 
     buildFeatures {
         viewBinding = true
-        dataBinding true
     }
-
+    dataBinding {
+        enabled = true
+    }
     defaultConfig {
         minSdk 21
         targetSdk 31
@@ -64,6 +65,7 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.squareup.picasso:picasso:2.8'
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
