--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,13 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
         classpath "org.jetbrains.kotlin:kotlin-serialization:1.4.10"
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5")
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
