--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -67,6 +67,9 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.squareup.picasso:picasso:2.8'
 
+    implementation 'com.github.smarteist:autoimageslider:1.4.0'
+    implementation 'com.github.ome450901:SimpleRatingBar:1.5.1'
+
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
