--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation(project(":domain"))
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.android.support:appcompat-v7:28'
     def lifecycle_version = "2.4.0-alpha03"
     //di
     implementation "org.koin:koin-android:2.0.1"
